Feature ETP-1152: corrections based on Sonar recommendations